terraform/security-groups.tf
resource "aws_security_group" "nomad_server" {
	name = "foundation-server-sg"
	description = "Security group for Nomad Server Instances"
	vpc_id = "${var.vpc_id}"

	tags {
		Name = "Nomad Server (${var.cluster_name})"
	}

	# SSH
	ingress {
		from_port = 22
		to_port = 22
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	# Nomad HTTP
	ingress {
		from_port = 4646
		to_port = 4646
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	# Nomad RPC
	ingress {
		from_port = 4647
		to_port = 4647
		protocol = "tcp"
		self = true
	}

	# Nomad Serf
	ingress {
		from_port = 4648
		to_port = 4648
		protocol = "tcp"
		self = true
	}

	# TCP All outbound traffic
	egress {
		from_port = 0
		to_port = 65535
		protocol = "tcp"
		cidr_blocks = ["0.0.0.0/0"]
	}

	# UDP All outbound traffic
	egress {
		from_port = 0
		to_port = 65535
		protocol = "udp"
		cidr_blocks = ["0.0.0.0/0"]
	}
}
